# json_schema_edit

./: Cargo.toml  LICENSE  README.md  index.html  json_schema_edit-946da25b03518a83.js  sw.js
.cargo/: config.toml
.github/workflows/: rust.yml
assets/: manifest.json
src/: app.rs  gui.rs  lib.rs  main.rs  platform.rs  processing.rs
src/gui/: central_panel.rs  menu_bar.rs
src/gui/central_panel/: deep_hash_map.rs
src/gui/menu_bar/: open.rs  save.rs
src/platform/: native.rs  web.rs
src/processing/: json_schema.rs  processing_state.rs
