[package]
name = "json_schema_edit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
serde = { version = "*", features = ["derive"] }
serde_jsonc = "*"
egui = "*"
eframe = { version = "*", default-features = false, features = [
    "default_fonts",
    "persistence",
    "glow",
] }
egui_plot = "*"
egui_extras = {version = "*", features = ["syntect", "all_loaders"] }
rfd = "*"
reqwest = { version = "*", features = ["json"] }
regex = "*"
chrono = "*"
async-trait = "*"
egui_commonmark = {version = "*", features = ["better_syntax_highlighting"]}
image = "*"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "*", features = ["rt-multi-thread"] }
pollster = "*"
env_logger = "*"

# wasm:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "*"
web-sys = {version="*", features=["console", "Document", "Element", "Event", "HtmlElement", "HtmlAnchorElement", "Node", "Window", "BlobPropertyBag", "Url"]}
js-sys = "*"
