[package]
name = "json_schema_edit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
serde = { version = "1.0.196", features = ["derive"] }
serde_jsonc = { version = "1.0.108", features = ["preserve_order"] }
egui = { version = "0.26.2", features = ["rayon"] }
eframe = { version = "0.26.2", default-features = false, features = [
    "default_fonts",
    "persistence",
    "glow"
] }
egui_plot = "0.26.2"
egui_extras = {version = "0.26.2", features = ["syntect", "all_loaders"] }
rfd = "0.13.0"
reqwest = { version = "0.11.24", features = ["json"] }
regex = "1.10.3"
chrono = "0.4.34"
async-trait = "0.1.77"
egui_commonmark = {version = "0.12.1", features = ["better_syntax_highlighting"]}
image = "0.24.8"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
pollster = "0.3.0"
env_logger = "0.11.2"

# wasm:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.41"
web-sys = {version="0.3.68", features=["console", "Document", "Element", "Event", "HtmlElement", "HtmlAnchorElement", "Node", "Window", "BlobPropertyBag", "Url"]}
js-sys = "0.3.68"
